# platform.core.uifw.stt-engine-default

./: AUTHORS  CMakeLists.txt  LICENSE  NOTICE  org.tizen.stt-engine-default-info.xml  org.tizen.stt-engine-default.xml  stt-default-info.xml
lib/aarch64/: libspeex.so.1.5.0
lib/armv7l/: libspeex.so.1  libspeex.so.1.1  libspeexdsp.so.1  libspeexdsp.so.1.6
lib/i586/: libspeex.so.1.5.0
lib/x86_64/: libspeex.so.1.5.0
packaging/: org.tizen.stt-engine-default.spec  stt-engine-default.spec
