CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(stt-engine-default C)

SET(VERSION 0.0.15a)
FIND_PROGRAM(UNAME NAMES uname)
EXEC_PROGRAM("${UNAME}" ARGS "-m" OUTPUT_VARIABLE "ARCH")
IF("${ARCH}" MATCHES "^arm.*")
INSTALL(FILES ${CMAKE_SOURCE_DIR}/lib/armv7l/libn66asr.so DESTINATION ${TZ_SYS_RO_SHARE}/voice/stt/1.0/engine/ COMPONENT RuntimeLibraries)
ELSEIF("${ARCH}" MATCHES "^i586.*")
INSTALL(FILES ${CMAKE_SOURCE_DIR}/lib/i586/libn66asr.so DESTINATION ${TZ_SYS_RO_SHARE}/voice/stt/1.0/engine/ COMPONENT RuntimeLibraries)
ELSEIF("${ARCH}" MATCHES "^i686.*")
INSTALL(FILES ${CMAKE_SOURCE_DIR}/lib/i586/libn66asr.so DESTINATION ${TZ_SYS_RO_SHARE}/voice/stt/1.0/engine/ COMPONENT RuntimeLibraries)
ELSEIF("${ARCH}" MATCHES "^aarch64.*")
INSTALL(FILES ${CMAKE_SOURCE_DIR}/lib/aarch64/libn66asr.so DESTINATION ${TZ_SYS_RO_SHARE}/voice/stt/1.0/engine/ COMPONENT RuntimeLibraries)
ELSEIF("${ARCH}" MATCHES "^x86_64.*")
INSTALL(FILES ${CMAKE_SOURCE_DIR}/lib/x86_64/libn66asr.so DESTINATION ${TZ_SYS_RO_SHARE}/voice/stt/1.0/engine/ COMPONENT RuntimeLibraries)
ENDIF()

INSTALL(FILES ${CMAKE_SOURCE_DIR}/stt-default-info.xml DESTINATION ${TZ_SYS_RO_SHARE}/voice/stt/1.0/engine-info/)