CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(org.tizen.stt-engine-default C)

SET(VERSION 0.0.15a)
FIND_PROGRAM(UNAME NAMES uname)
EXEC_PROGRAM("${UNAME}" ARGS "-m" OUTPUT_VARIABLE "ARCH")
IF("${ARCH}" MATCHES "^arm.*")
#INSTALL(FILES ${CMAKE_SOURCE_DIR}/lib/armv7l/libn66asr.so DESTINATION ${TZ_SYS_RO_SHARE}/voice/stt/1.0/engine/ COMPONENT RuntimeLibraries)
INSTALL(FILES ${CMAKE_SOURCE_DIR}/lib/armv7l/libn66asrdll.so DESTINATION ${APP_INSTALL_PREFIX}/lib/ COMPONENT RuntimeLibraries)
INSTALL(FILES ${CMAKE_SOURCE_DIR}/lib/armv7l/libspeex.so DESTINATION ${APP_INSTALL_PREFIX}/lib/ COMPONENT RuntimeLibraries)
INSTALL(FILES ${CMAKE_SOURCE_DIR}/lib/armv7l/libspeex.so.1 DESTINATION ${APP_INSTALL_PREFIX}/lib/ COMPONENT RuntimeLibraries)
INSTALL(FILES ${CMAKE_SOURCE_DIR}/lib/armv7l/libspeex.so.1.5.0 DESTINATION ${APP_INSTALL_PREFIX}/lib/ COMPONENT RuntimeLibraries)
INSTALL(FILES ${CMAKE_SOURCE_DIR}/lib/armv7l/libsvoicedll.so DESTINATION ${APP_INSTALL_PREFIX}/lib/ COMPONENT RuntimeLibraries)
INSTALL(FILES ${CMAKE_SOURCE_DIR}/lib/armv7l/libvoiceactivity.so DESTINATION ${APP_INSTALL_PREFIX}/lib/ COMPONENT RuntimeLibraries)
INSTALL(PROGRAMS ${CMAKE_SOURCE_DIR}/bin/armv7l/org.tizen.stt-engine-default DESTINATION ${APP_INSTALL_PREFIX}/bin/)
ELSEIF("${ARCH}" MATCHES "^i586.*")
#INSTALL(FILES ${CMAKE_SOURCE_DIR}/lib/i586/libn66asr.so DESTINATION ${TZ_SYS_RO_SHARE}/voice/stt/1.0/engine/ COMPONENT RuntimeLibraries)
INSTALL(FILES ${CMAKE_SOURCE_DIR}/lib/i586/libn66asrdll.so DESTINATION ${APP_INSTALL_PREFIX}/lib/ COMPONENT RuntimeLibraries)
INSTALL(FILES ${CMAKE_SOURCE_DIR}/lib/i586/libspeex.so DESTINATION ${APP_INSTALL_PREFIX}/lib/ COMPONENT RuntimeLibraries)
INSTALL(FILES ${CMAKE_SOURCE_DIR}/lib/i586/libspeex.so.1 DESTINATION ${APP_INSTALL_PREFIX}/lib/ COMPONENT RuntimeLibraries)
INSTALL(FILES ${CMAKE_SOURCE_DIR}/lib/i586/libspeex.so.1.5.0 DESTINATION ${APP_INSTALL_PREFIX}/lib/ COMPONENT RuntimeLibraries)
INSTALL(FILES ${CMAKE_SOURCE_DIR}/lib/i586/libsvoicedll.so DESTINATION ${APP_INSTALL_PREFIX}/lib/ COMPONENT RuntimeLibraries)
INSTALL(FILES ${CMAKE_SOURCE_DIR}/lib/i586/libvoiceactivity.so DESTINATION ${APP_INSTALL_PREFIX}/lib/ COMPONENT RuntimeLibraries)
INSTALL(PROGRAMS ${CMAKE_SOURCE_DIR}/bin/i586/org.tizen.stt-engine-default DESTINATION ${APP_INSTALL_PREFIX}/bin/)
ELSEIF("${ARCH}" MATCHES "^i686.*")
#INSTALL(FILES ${CMAKE_SOURCE_DIR}/lib/i586/libn66asr.so DESTINATION ${TZ_SYS_RO_SHARE}/voice/stt/1.0/engine/ COMPONENT RuntimeLibraries)
INSTALL(FILES ${CMAKE_SOURCE_DIR}/lib/i586/libn66asrdll.so DESTINATION ${APP_INSTALL_PREFIX}/lib/ COMPONENT RuntimeLibraries)
INSTALL(FILES ${CMAKE_SOURCE_DIR}/lib/i586/libspeex.so DESTINATION ${APP_INSTALL_PREFIX}/lib/ COMPONENT RuntimeLibraries)
INSTALL(FILES ${CMAKE_SOURCE_DIR}/lib/i586/libspeex.so.1 DESTINATION ${APP_INSTALL_PREFIX}/lib/ COMPONENT RuntimeLibraries)
INSTALL(FILES ${CMAKE_SOURCE_DIR}/lib/i586/libspeex.so.1.5.0 DESTINATION ${APP_INSTALL_PREFIX}/lib/ COMPONENT RuntimeLibraries)
INSTALL(FILES ${CMAKE_SOURCE_DIR}/lib/i586/libsvoicedll.so DESTINATION ${APP_INSTALL_PREFIX}/lib/ COMPONENT RuntimeLibraries)
INSTALL(FILES ${CMAKE_SOURCE_DIR}/lib/i586/libvoiceactivity.so DESTINATION ${APP_INSTALL_PREFIX}/lib/ COMPONENT RuntimeLibraries)
INSTALL(PROGRAMS ${CMAKE_SOURCE_DIR}/bin/i586/org.tizen.stt-engine-default DESTINATION ${APP_INSTALL_PREFIX}/bin/)
ELSEIF("${ARCH}" MATCHES "^aarch64.*")
#INSTALL(FILES ${CMAKE_SOURCE_DIR}/lib/aarch64/libn66asr.so DESTINATION ${TZ_SYS_RO_SHARE}/voice/stt/1.0/engine/ COMPONENT RuntimeLibraries)
INSTALL(FILES ${CMAKE_SOURCE_DIR}/lib/aarch64/libn66asrdll.so DESTINATION ${APP_INSTALL_PREFIX}/lib/ COMPONENT RuntimeLibraries)
INSTALL(FILES ${CMAKE_SOURCE_DIR}/lib/aarch64/libspeex.so DESTINATION ${APP_INSTALL_PREFIX}/lib/ COMPONENT RuntimeLibraries)
INSTALL(FILES ${CMAKE_SOURCE_DIR}/lib/aarch64/libspeex.so.1 DESTINATION ${APP_INSTALL_PREFIX}/lib/ COMPONENT RuntimeLibraries)
INSTALL(FILES ${CMAKE_SOURCE_DIR}/lib/aarch64/libspeex.so.1.5.0 DESTINATION ${APP_INSTALL_PREFIX}/lib/ COMPONENT RuntimeLibraries)
INSTALL(FILES ${CMAKE_SOURCE_DIR}/lib/aarch64/libsvoicedll.so DESTINATION ${APP_INSTALL_PREFIX}/lib/ COMPONENT RuntimeLibraries)
INSTALL(FILES ${CMAKE_SOURCE_DIR}/lib/aarch64/libvoiceactivity.so DESTINATION ${APP_INSTALL_PREFIX}/lib/ COMPONENT RuntimeLibraries)
INSTALL(PROGRAMS ${CMAKE_SOURCE_DIR}/bin/aarch64/org.tizen.stt-engine-default DESTINATION ${APP_INSTALL_PREFIX}/bin/)
ELSEIF("${ARCH}" MATCHES "^x86_64.*")
#INSTALL(FILES ${CMAKE_SOURCE_DIR}/lib/x86_64/libn66asr.so DESTINATION ${TZ_SYS_RO_SHARE}/voice/stt/1.0/engine/ COMPONENT RuntimeLibraries)
INSTALL(FILES ${CMAKE_SOURCE_DIR}/lib/x86_64/libn66asrdll.so DESTINATION ${APP_INSTALL_PREFIX}/lib/ COMPONENT RuntimeLibraries)
INSTALL(FILES ${CMAKE_SOURCE_DIR}/lib/x86_64/libspeex.so DESTINATION ${APP_INSTALL_PREFIX}/lib/ COMPONENT RuntimeLibraries)
INSTALL(FILES ${CMAKE_SOURCE_DIR}/lib/x86_64/libspeex.so.1 DESTINATION ${APP_INSTALL_PREFIX}/lib/ COMPONENT RuntimeLibraries)
INSTALL(FILES ${CMAKE_SOURCE_DIR}/lib/x86_64/libspeex.so.1.5.0 DESTINATION ${APP_INSTALL_PREFIX}/lib/ COMPONENT RuntimeLibraries)
INSTALL(FILES ${CMAKE_SOURCE_DIR}/lib/x86_64/libsvoicedll.so DESTINATION ${APP_INSTALL_PREFIX}/lib/ COMPONENT RuntimeLibraries)
INSTALL(FILES ${CMAKE_SOURCE_DIR}/lib/x86_64/libvoiceactivity.so DESTINATION ${APP_INSTALL_PREFIX}/lib/ COMPONENT RuntimeLibraries)
INSTALL(PROGRAMS ${CMAKE_SOURCE_DIR}/bin/x86_64/org.tizen.stt-engine-default DESTINATION ${APP_INSTALL_PREFIX}/bin/)
ENDIF()

INSTALL(FILES ${CMAKE_SOURCE_DIR}/org.tizen.stt-engine-default-info.xml DESTINATION ${TZ_SYS_RO_SHARE}/voice/stt/1.0/engine-info/)
INSTALL(FILES ${CMAKE_SOURCE_DIR}/org.tizen.stt-engine-default.xml DESTINATION ${APP_MANIFESTDIR})
